--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-fetch-blob",
-  "version": "0.10.3-beta.1",
+  "name": "react-native-blob-fetch",
+  "version": "0.10.4",
   "description": "A module provides upload, download, and files access API. Supports file stream read/write for process large files.",
   "main": "index.js",
   "scripts": {
@@ -27,9 +27,9 @@
     }
   },
   "repository": {
-    "url": "https://github.com/wkh237/react-native-fetch-blob.git"
+    "url": "https://github.com/zoechen799/react-native-fetch-blob.git"
   },
-  "author": "wkh237 <xeiyan@gmail.com>",
+  "author": "Johnny Chen <zoechen799@gmail.com>",
   "license": "MIT",
   "contributors": [
     "960px <pinovel@gmail.com>",
